complete OpenAI integration. clean up config. add better instructions. make models for book and analysis. make analysis look at previous analysis as well
Enhance application structure and data management

Updated project files for better organization and flexibility.
Removed obsolete classes and introduced a new `Config` class for centralized configuration management.
Added new classes for books and chapters to improve data representation, including `Book`, `ChapterInfo`, and `ChapterAnalysis`.
Expanded chapter analysis schema and added structured instructions for the OpenAI model.
Updated file paths and settings for improved maintainability and adaptability.

--- a/AIBookSummary.csproj
+++ b/AIBookSummary.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="VersOne.Epub" Version="3.3.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="output\" />
+  </ItemGroup>
+
 </Project>
