Update file paths in config.json
Changed "InputPath", "ConfigPath", and "OutputPath"
to reflect the new project location from E: to D: drive.

--- a/Config/config.json
+++ b/Config/config.json
@@ -1,7 +1,7 @@
 {
-  "InputPath": "E:\\Coding\\Projects\\AIBookSummary\\input\\",
-  "ConfigPath": "E:\\Coding\\Projects\\AIBookSummary\\Config\\",
-  "OutputPath": "E:\\Coding\\Projects\\AIBookSummary\\output\\",
+  "InputPath": "D:\\projects\\BookSummary\\input\\",
+  "ConfigPath": "D:\\projects\\BookSummary\\Config\\",
+  "OutputPath": "D:\\projects\\BookSummary\\output\\",
 
 
   "SchemaPath": "chapter_analysis.schema.json",
