--- a/AIBookSummary/Config/config.json
+++ b/AIBookSummary/Config/config.json
@@ -1,7 +1,5 @@
 {
-  "InputPath": "D:\\projects\\BookSummary\\input\\",
-  "ConfigPath": "D:\\projects\\BookSummary\\Config\\",
-  "OutputPath": "D:\\projects\\BookSummary\\output\\",
+  "ProjectPath": "D:\\projects\\AIBookSummary\\AIBookSummary\\",
 
 
   "SchemaPath": "chapter_analysis.schema.json",
