--- a/AIBookSummary/AIBookSummary.csproj
+++ b/AIBookSummary/AIBookSummary.csproj
@@ -1,20 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net9.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="HtmlAgilityPack" Version="1.12.2" />
-    <PackageReference Include="OpenAI" Version="2.2.0" />
-    <PackageReference Include="VersOne.Epub" Version="3.3.4" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="HtmlAgilityPack" Version="1.12.2" />
+		<PackageReference Include="OpenAI" Version="2.2.0" />
+		<PackageReference Include="VersOne.Epub" Version="3.3.4" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Output\" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="Output\" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\AIBookSummary.Models\AIBookSummary.Models.csproj" />
+	</ItemGroup>
 
 </Project>
