--- a/AIBookSummaryAPI/appsettings.Development.json
+++ b/AIBookSummaryAPI/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "AZURE_SQL_CONNECTIONSTRING": "Data Source=falutin.database.windows.net;Initial Catalog=BookSummary;Authentication=Active Directory Default;Encrypt=True;"
   }
 }
